# instagram-naive-scraper

./: .gitignore  README.md  config.py  content.py  logger.py  main.py  posts.py  pyproject.toml  scraper.py  user.py  utils.py
